[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/archer_blue.png" type="Texture" id=1]
[ext_resource path="res://scripts/character.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 7 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -40 ), Vector2( 0, -40 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 31 )
shape = SubResource( 4 )

[node name="Texture" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 7

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 1 )
anims/jump = SubResource( 5 )
anims/walk = SubResource( 3 )

[node name="JumpTween" type="Tween" parent="."]

[node name="TargetCell" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 16, 16 )

[connection signal="tween_all_completed" from="JumpTween" to="." method="on_tween_finished"]
